Add functional tests

--- a/tox.ini
+++ b/tox.ini
@@ -26,3 +26,9 @@ deps =
   sphinx
 commands =
         sphinx-build -a -E -W -b html doc/source doc/build
+
+[testenv:functional]
+setenv =
+  OS_TEST_PATH=./tests/functional
+  KOSTYOR_HOST=127.0.0.1
+  KOSTYOR_PORT=5000
