--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = docs,py34,py27,pep8
+envlist = docs,py34,py27,pep8,functional
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
@@ -32,3 +32,8 @@ setenv =
   OS_TEST_PATH=./tests/functional
   KOSTYOR_HOST=127.0.0.1
   KOSTYOR_PORT=5000
+deps =
+  {[testenv]deps}
+commands =
+        bash tools/functional_tests_env.sh
+        ostestr
